--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="description" content="<%= VUE_APP_SITE_DESCRIPTION %>" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>vue-starter4</title>
+    <link rel="canonical" href="<%= VUE_APP_HOST %>">
+    <title><%= VUE_APP_SITE_TITLE %></title>
   </head>
   <body>
     <noscript>
